# exchange-arbitrage-bot

./: .env.example  .gitignore  README.md
src/: pyproject.toml  scrapy.cfg  settings.py
src/commands/: __init__.py  db_cleaner.py  dual_comparer.py  exchange_initializer.py  session_runner.py  tg_sender.py
src/commands/base/: __init__.py  db_reactor_command.py
src/crypto/base/: __init__.py  base_client.py  base_exchange.py  base_last_trade_client.py  base_manager.py  base_ticker_client.py  base_url_builder_client.py
src/crypto/exchanges/: __init__.py  whitebit_exchange.py
src/crypto/managers/: __init__.py  last_trade_manager.py  ticker_manager.py  url_builder_manager.py
src/database/: env.py
src/database/models/: __init__.py  bundle.py  exchange.py  market.py  session.py  tg_user.py
src/database/versions/: 032eafaf2da5_add_tg_users_table.py  4cc0533f4c31_add_exchanges_table.py  5c7226307b6f_add_bundles_table.py  816095287de2_add_markets_table.py  a49112937a1e_add_sessions_table.py
src/interfaces/: __init__.py  market_symbol.py  session_settings.py  tg_bundle_message.py
src/items/: __init__.py  last_trade_item.py  market_item.py
src/pipelines/: __init__.py  last_trade_db_pipeline.py  market_filter_pipeline.py  ticker_db_pipeline.py
src/pipelines/base/: __init__.py  base_db_pipeline.py
src/spiders/: __init__.py  last_trade_spider.py  ticker_spider.py
src/spiders/base/: __init__.py  base_session_spider.py
src/utils/: __init__.py  general.py  task_status_codes.py
src/utils/database/: __init__.py  compile_stmt.py  get_db_credentials.py  (+3 more)
(+28 files in other folders)
